SERVER-61868 Switch aggColl(Min|Max) to use comparison that is aware of MQL semantics for NaN